--- a/static/global.css
+++ b/static/global.css
@@ -22,6 +22,7 @@ body {
 	line-height: 1.5;
 	color: #f89504;
 	background-color: rgb(7, 7, 7);
+	overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
